--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^5.3.3",
-    "emailjs-com": "^2.6.4",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3"
